force-app/main/default/objects/Pengyouquan_City_Mapping_Rule__c/Pengyouquan_City_Mapping_Rule__c.object-meta.xml
<CustomObject>
    <description>OMNI-70733 - Pengyouquan (WeChat Moments ads) lead city attribution rules. Consumed by SCF leads-handler (tencent-ads) and IEFUtils.parseCityFromEtag. Matching cascade: IP own-city (code constant) → etag tag → (All,All) direct row → (Province, City) exact → (Province, Other) fallback → global Shanghai.</description>
    <label>Pengyouquan City Mapping Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pengyouquan City Mapping Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>