force-app/main/default/objects/Pengyouquan_City_Mapping_Rule__c/fields/Etag_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Etag_Keyword__c</fullName>
    <description>OMNI-70733 - Ad-targeting keyword embedded in the lead etag (e.g. T5, Tall, Tcs). Matched case-insensitively as &quot;-&lt;tag&gt;-&quot; against the etag; longer keyword wins on overlap. Tags exist only as data here — never hard-coded.</description>
    <inlineHelpText>Tag keyword, e.g. T5 / Tall / Tcs</inlineHelpText>
    <label>Etag Keyword</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>