force-app/main/default/objects/Pengyouquan_City_Mapping_Rule__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OMNI-70733 - Rules take effect only when active. Imports default to FALSE; bulk-activate deliberately as the release switch. Deactivate instead of delete to keep audit history.</description>
    <inlineHelpText>Only active rules are loaded by SCF/Apex</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>