force-app/main/default/objects/Pengyouquan_City_Mapping_Rule__c/fields/Phone_City__c.field-meta.xml
<CustomField>
    <fullName>Phone_City__c</fullName>
    <description>OMNI-70733 - Phone home-location city (Chinese, e.g. 广州). Sentinels: &quot;All&quot; = city not checked (direct-tag rows); &quot;Other&quot; = province-level fallback row or tag-default row.</description>
    <inlineHelpText>City, e.g. 广州. &quot;All&quot; = don&apos;t check; &quot;Other&quot; = province fallback</inlineHelpText>
    <label>Phone City</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>