force-app/main/default/objects/Pengyouquan_City_Mapping_Rule__c/fields/Phone_Province__c.field-meta.xml
<CustomField>
    <fullName>Phone_Province__c</fullName>
    <description>OMNI-70733 - Phone home-location province (Chinese, e.g. 广东). Sentinel &quot;All&quot; = province not checked (direct-tag rows).</description>
    <inlineHelpText>Province, e.g. 广东. &quot;All&quot; = don&apos;t check</inlineHelpText>
    <label>Phone Province</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>