force-app/main/default/objects/Pengyouquan_City_Mapping_Rule__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>OMNI-70733 - Cascade level for deterministic matching: 1 = (All, All) direct row; 2 = (Province, City) exact; 3 = (Province, Other) fallback. Reserved for future tag-default rows (4).</description>
    <inlineHelpText>1=direct, 2=exact, 3=province fallback</inlineHelpText>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>