force-app/main/default/objects/Pengyouquan_City_Mapping_Rule__c/fields/Target_City_Code__c.field-meta.xml
<CustomField>
    <fullName>Target_City_Code__c</fullName>
    <description>OMNI-70733 - Target own-city code this rule attributes the lead to (lowercase, e.g. guangzhou / changsha). Must be one of the ten own cities.</description>
    <inlineHelpText>Lowercase own-city code, e.g. guangzhou</inlineHelpText>
    <label>Target City Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>